# contract-clauses-reviewer

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
contract_review/: __init__.py  cli.py  config.py  ingest.py  models.py  pipeline.py  ports.py  prompts.py
contract_review/api/: __init__.py  app.py
contract_review/datasets/: __init__.py  contractnli.py
contract_review/llm/: __init__.py  client.py  fake.py  openai_compatible.py  scripted.py
contract_review/playbook/: __init__.py  loader.py  nda_contractnli.yaml
contract_review/stages/: __init__.py  assess.py  match.py  redline.py  report.py  segment.py  verify.py
contract_review/storage/: __init__.py  sqlite_repo.py
docs/: architecture.md
evaluation/: __init__.py  metrics.py  oracle.py
scripts/: fetch_contractnli.sh
tests/: conftest.py  test_api.py  test_assess.py  test_evaluation.py  test_ingest.py  test_ingestion_and_match.py  test_models.py  test_pipeline.py  test_playbook.py  test_redline.py  test_segment_and_cli.py  test_storage.py
tests/fixtures/contractnli/: dev.json
