[project]
name = "contract-review"
version = "0.1.0"
description = "Playbook-driven contract clause reviewer with grounded verdicts and human sign-off."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
contract-review = "contract_review.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["contract_review*"]
