[project]
name = "contract-review"
version = "0.1.0"
description = "Playbook-driven contract clause reviewer with grounded verdicts and human sign-off."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
pdf = ["pypdf>=4"]
dev = ["pytest>=8.0", "pypdf>=4"]

[project.scripts]
contract-review = "contract_review.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["contract_review*", "evaluation*"]
